refactoring using service interfaces for better testing and mocking